# TitleBar

./: PyPI site.txt  README.rst  README.txt  __init__.py  pyproject.toml  setup.py  test.py
TitleBarCTk/: __init__.py
TitleBarCTk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dat/: datREADME.txt  dat_main.py
dat/img/: ExitClose.py  FullScreen.py  Minimise.py  Save.py
titlebar_ctk/: __init__.py
titlebarctk/: __init__.py
titlebarctk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
